--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -25,17 +25,6 @@
       });
     })();
   </script>
-  {# Theme variant #}
-  <script>
-    (function() {
-      try {
-        const storedTheme = localStorage.getItem('themeVariant');
-        if (storedTheme) document.documentElement.classList.add(`theme-${storedTheme}`);
-      } catch (event) {
-        console.error('Could not apply theme variant from localStorage', event);
-      }
-    })();
-  </script>
 
   {# Meta #}
   <meta charset="utf-8">
@@ -59,7 +48,7 @@
   <meta property="og:url" content="{{ site.url }}{{ page.url }}">
   <meta property="og:title" content="{{ meta_title }}">
   <meta property="og:description" content="{{ meta_description }}">
-  <meta property="og:image" content="{{ site.url }}/assets/social-screenshot.png">
+  <meta property="og:image" content="{{ site.url }}/assets/social.png">
   <meta property="og:site_name" content="{{ site.title }}">
   <meta property="og:locale" content="en_US">
   <meta property="og:author" content="{{ site.author.name }}">
@@ -69,7 +58,7 @@
   <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
   <meta name="twitter:title" content="{{ title if title else site.title }}">
   <meta name="twitter:description" content="{{ meta_description }}">
-  <meta name="twitter:image" content="{{ site.url }}/assets/social-screenshot.png">
+  <meta name="twitter:image" content="{{ site.url }}/assets/social.png">
   <meta name="twitter:creator" content="{{ site.author.x }}">
 
   {# CSS #}
