--- a/index.njk
+++ b/index.njk
@@ -13,13 +13,7 @@ description: /dev/push is an open source alternative to Vercel and Render, allow
       <a class="btn-lg-outline max-sm:w-full" href="https://github.com/hunvreus/devpush">Source code</a>
     </footer>
   </header>
-  <div class="border rounded-xl mask-b-from-50% mask-b-to-100%">
-    <div class="flex items-center justify-start gap-x-1.5 py-3 px-4 border-b">
-      <span class="size-2.5 rounded-full bg-red-500"></span>
-      <span class="size-2.5 rounded-full bg-orange-500"></span>
-      <span class="size-2.5 rounded-full bg-green-500"></span>
-    </div>
-    <div class="overflow-hidden h-[650px] relative">
+  <div class="rounded-2xl overflow-hidden relative">
       <img src="/assets/images/screenshot-dark.png" alt="Screenshot of /dev/push" class="w-full hidden dark:block">
       <img src="/assets/images/screenshot-light.png" alt="Screenshot of /dev/push" class="w-full dark:hidden">
       <button type="button" class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-primary text-background rounded-full pl-2 pr-4 h-10 flex items-center gap-x-2 [&>svg]:size-6 [&>svg]:stroke-[1.5] font-medium ring-6 ring-background/50">
@@ -27,7 +21,6 @@ description: /dev/push is an open source alternative to Vercel and Render, allow
         <span class="max-sm:hidden">Watch demo</span>
         <span class="sm:hidden">Demo</span>
       </button>
-    </div>
   </div>
 </section>
 
