--- a/_includes/layouts/doc.njk
+++ b/_includes/layouts/doc.njk
@@ -15,7 +15,7 @@ layout: layouts/base.njk
       <div class="mx-auto w-full max-w-2xl flex-1 space-y-10">
         <header class="space-y-2">
           <div class="flex items-start gap-x-2">
-            <h1 class="text-2xl font-semibold tracking-tight sm:text-3xl xl:text-4xl mr-auto">{{ title }}</h1>
+            <h1 class="text-3xl font-semibold tracking-tight sm:text-4xl mr-auto">{{ title }}</h1>
             {% if navigation.prev %}
               <a href="{{ navigation.prev.url }}" class="btn-sm-icon-secondary mt-1.5 hidden sm:flex">
                 <span class="sr-only">{{ navigation.prev.label }}</span>
@@ -56,15 +56,14 @@ layout: layouts/base.njk
         </footer>
       </div>
     </article>
-    {# mx-auto flex w-full max-w-2xl min-w-0 flex-1 flex-col gap-8 px-4 py-6 text-neutral-800 md:px-0 lg:py-8 dark:text-neutral-300 #}
-
     <aside class="hidden xl:block w-56">
       <div class="sticky top-20 text-sm [&_a]:text-muted-foreground [&_a]:hover:text-primary space-y-2 [&_ol]:space-y-2 [&_ol_ol]:pl-3 [&_ol_ol]:mt-2">
-        <h2 class="font-medium">On this page</h2>
+        <h2 class="font-medium flex items-center gap-1">
+          {% lucide "table-of-contents", { class: "size-4" } %}
+          On this page
+        </h2> 
         {{ content | toc | safe }}
       </div>
     </aside>
   </div>
 </main>
-
-{# sticky top-[calc(var(--header-height)+1px)] z-30 ml-auto hidden h-[calc(100svh-var(--header-height)-var(--footer-height))] w-72 flex-col gap-4 overflow-hidden overscroll-none pb-8 xl:flex #}
