--- a/index.njk
+++ b/index.njk
@@ -4,12 +4,12 @@ title: /dev/push
 description: /dev/push is an open source alternative to Vercel and Render, allowing you to deploy your apps straight from GitHub.
 ---
 
-<section class="max-w-7xl mx-auto px-6 lg:px-8 pt-24 pb-16 sm:pt-32 sm:pb-24">
+<section class="max-w-7xl mx-auto px-6 lg:px-8 py-16 sm:py-24">
   <header class="mx-auto max-w-2xl text-center mb-12">
     <h1 class="font-semibold tracking-tight text-4xl sm:text-5xl">Deploy your apps with a git push</h1>
     <p class="mt-4 mb-6">/dev/push is an open source alternative to Vercel and Render, allowing you to deploy your apps straight from GitHub.</p>
     <footer class="flex flex-col sm:flex-row items-center justify-center gap-2 pt-2">
-      <a class="btn-lg max-sm:w-full" href="https://github.com/hunvreus/devpush">Sign up online</a>
+      <a class="btn-lg max-sm:w-full" href="https://app.devpu.sh">Sign up online</a>
       <a class="btn-lg-outline max-sm:w-full" href="https://github.com/hunvreus/devpush">Source code</a>
     </footer>
   </header>
