--- a/index.njk
+++ b/index.njk
@@ -14,13 +14,15 @@ description: /dev/push is an open source alternative to Vercel and Render, allow
     </footer>
   </header>
   <div class="rounded-2xl overflow-hidden relative">
+    <a href="https://youtube.com" class="cursor-pointer group" target="_blank">
       <img src="/assets/images/screenshot-dark.png" alt="Screenshot of /dev/push" class="w-full hidden dark:block">
       <img src="/assets/images/screenshot-light.png" alt="Screenshot of /dev/push" class="w-full dark:hidden">
-      <button type="button" class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-primary text-background rounded-full pl-2 pr-4 h-10 flex items-center gap-x-2 [&>svg]:size-6 [&>svg]:stroke-[1.5] font-medium ring-6 ring-background/50">
+      <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-primary text-background rounded-full pl-2 pr-4 h-10 flex items-center gap-x-2 [&>svg]:size-6 [&>svg]:stroke-[1.5] font-medium ring-1 ring-background/20 hover:scale-1.5 group-hover:scale-105 transition-all">
         {% include "icons/circle-play.svg" %}
         <span class="max-sm:hidden">Watch demo</span>
         <span class="sm:hidden">Demo</span>
-      </button>
+      </div>
+    </a>
   </div>
 </section>
 
