--- a/index.njk
+++ b/index.njk
@@ -9,20 +9,20 @@ description: /dev/push is an open source alternative to Vercel and Render, allow
     <h1 class="font-semibold tracking-tight text-4xl sm:text-5xl">Deploy your apps with a git push</h1>
     <p class="mt-4 mb-6">/dev/push is an open source alternative to Vercel and Render, allowing you to deploy your apps straight from GitHub.</p>
     <footer class="flex flex-col sm:flex-row items-center justify-center gap-2 pt-2">
-      <a class="btn-lg max-sm:w-full" href="https://app.devpu.sh">Sign up online</a>
-      <a class="btn-lg-outline max-sm:w-full" href="https://github.com/hunvreus/devpush">Source code</a>
+      {# <a class="btn-lg max-sm:w-full" href="https://app.devpu.sh">Sign up online</a> #}
+      <a class="btn-lg max-sm:w-full" href="https://github.com/hunvreus/devpush">Get the source code</a>
     </footer>
   </header>
   <div class="rounded-2xl overflow-hidden relative">
-    <a href="https://youtube.com" class="cursor-pointer group" target="_blank">
+    {# <a href="https://youtube.com" class="cursor-pointer group" target="_blank"> #}
       <img src="/assets/images/screenshot-dark.png" alt="Screenshot of /dev/push" class="w-full hidden dark:block">
       <img src="/assets/images/screenshot-light.png" alt="Screenshot of /dev/push" class="w-full dark:hidden">
-      <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-primary text-background rounded-full pl-2 pr-4 h-10 flex items-center gap-x-2 [&>svg]:size-6 [&>svg]:stroke-[1.5] font-medium ring-1 ring-background/20 hover:scale-1.5 group-hover:scale-105 transition-all">
+      {# <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-primary text-background rounded-full pl-2 pr-4 h-10 flex items-center gap-x-2 [&>svg]:size-6 [&>svg]:stroke-[1.5] font-medium ring-1 ring-background/20 hover:scale-1.5 group-hover:scale-105 transition-all">
         {% include "icons/circle-play.svg" %}
         <span class="max-sm:hidden">Watch demo</span>
         <span class="sm:hidden">Demo</span>
-      </div>
-    </a>
+      </div> #}
+    {# </a> #}
   </div>
 </section>
 
