Cleaning up sidebar

--- a/_includes/partials/docs/sidebar.njk
+++ b/_includes/partials/docs/sidebar.njk
@@ -31,5 +31,5 @@
   header=header,
   footer=footer,
   content_attrs={ "class": "scrollbar" },
-  menu=menu
+  menu=menu | processMenu(collections)
 ) }}
