Adding links back

--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -27,7 +27,7 @@
       {% include "logos/github.svg" %}
       GitHub
     </a>
-    {# <a class="max-sm:w-full btn-sm-outline" href="https://app.devpu.sh">Sign in</a> #}
+    <a class="max-sm:w-full btn-sm-outline" href="https://app.devpu.sh">Sign in</a>
   </nav>
 
   <div class="sm:hidden" x-data="{ isOpen: false }">
