--- a/index.njk
+++ b/index.njk
@@ -9,7 +9,7 @@ description: /dev/push is an open source alternative to Vercel and Render, allow
     <h1 class="font-semibold tracking-tight text-4xl sm:text-5xl">Deploy your apps with a git push</h1>
     <p class="mt-4 mb-6">/dev/push is an open source alternative to Vercel and Render, allowing you to deploy your apps straight from GitHub.</p>
     <footer class="flex flex-col sm:flex-row items-center justify-center gap-2 pt-2">
-      {# <a class="btn-lg max-sm:w-full" href="https://app.devpu.sh">Sign up online</a> #}
+      <a class="btn-lg max-sm:w-full" href="https://app.devpu.sh">Sign up online</a>
       <a class="btn-lg max-sm:w-full" href="https://github.com/hunvreus/devpush">Get the source code</a>
     </footer>
   </header>
