--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -50,10 +50,10 @@
         GitHub
         {% include "logos/github.svg" %}
       </a>
-      {# <a class="btn-lg-ghost justify-between" href="https://app.devpu.sh">
+      <a class="btn-lg-ghost justify-between" href="https://app.devpu.sh">
         Sign in
         {% include "icons/arrow-right.svg" %}
-      </a> #}
+      </a>
     </nav>
   </div>
 </div>
