--- a/index.njk
+++ b/index.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/page.njk
-title: /dev/push
+title: Deploy your apps with a git push
 description: /dev/push is an open source alternative to Vercel and Render, allowing you to deploy your apps straight from GitHub.
 ---
 
